selftests/bpf: Fix errors compiling cg_storage_multi.h with musl libc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28327,6 +28327,7 @@
 	patches.suse/selftests-bpf-Fix-compiling-core_reloc.c-with-musl-l.patch
 	patches.suse/selftests-bpf-Fix-errors-compiling-lwt_redirect.c-wi.patch
 	patches.suse/selftests-bpf-Fix-errors-compiling-decap_sanity.c-wi.patch
+	patches.suse/selftests-bpf-Fix-errors-compiling-cg_storage_multi..patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
 	patches.suse/selftests-bpf-test-for-malformed-BPF_CORE_TYPE_ID_LO.patch
