--- a/series.conf
+++ b/series.conf
@@ -690,6 +690,7 @@
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
 	patches.suse/Revert-io_uring-rw-drop-EOPNOTSUPP-check-in-__io_com.patch
 	patches.suse/wifi-iwlwifi-Add-missing-firmware-info-for-bz-b0-mod.patch
+	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
