net: bonding: update the slave array for broadcast mode (bsc#1250894).

--- a/series.conf
+++ b/series.conf
@@ -80,6 +80,7 @@
 	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
 	patches.suse/udp-do-not-use-skb_release_head_state-before-skb_att.patch
+	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
