--- a/series.conf
+++ b/series.conf
@@ -11830,6 +11830,7 @@
 	patches.suse/ALSA-timer-fix-ida_free-call-while-not-allocated.patch
 	patches.suse/ALSA-usb-audio-Use-correct-sub-type-for-UAC3-feature.patch
 	patches.suse/iommu-amd-Avoid-stack-buffer-overflow-from-kernel-cm.patch
+	patches.suse/iommu-arm-smmu-v3-Fix-smmu_domain-nr_ats_masters-dec.patch
 	patches.suse/RDMA-rxe-Flush-delayed-SKBs-while-releasing-RXE-reso.patch
 	patches.suse/RDMA-erdma-Fix-ignored-return-value-of-init_kernel_q.patch
 	patches.suse/RDMA-hns-Fix-querying-wrong-SCC-context-for-DIP-algo.patch
