--- a/series.conf
+++ b/series.conf
@@ -11317,6 +11317,7 @@
 	patches.suse/selftests-bpf-Range-analysis-test-case-for-JSET.patch
 	patches.suse/bpf-arm64-Fix-fp-initialization-for-exception-boundary.patch
 	patches.suse/iommu-vt-d-Fix-missing-PASID-in-dev-TLB-flush-with-c.patch
+	patches.suse/iommu-amd-Enable-PASID-and-ATS-capabilities-in-the-c.patch
 	patches.suse/iommu-amd-Fix-geometry.aperture_end-for-V2-tables.patch
 	patches.suse/iommu-arm-smmu-qcom-Add-SM6115-MDSS-compatible.patch
 	patches.suse/rcu-Protect-defer_qs_iw_pending-from-data-race.patch
