perf/x86/intel: Allow to setup LBR for counting event for BPF (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28111,6 +28111,7 @@
 	patches.suse/fbdev-hpfb-Fix-an-error-handling-path-in-hpfb_dio_pr.patch
 	patches.suse/fbdev-efifb-Register-sysfs-groups-through-driver-cor.patch
 	patches.suse/fbdev-pxafb-Fix-possible-use-after-free-in-pxafb_tas.patch
+	patches.suse/perf-x86-intel-Allow-to-setup-LBR-for-counting-event-for-B.patch
 	patches.suse/bpf-Fix-use-after-free-in-bpf_uprobe_multi_link_attach.patch
 	patches.suse/powerpc-vdso-Fix-VDSO-data-access-when-running-in-a-.patch
 	patches.suse/jfs-UBSAN-shift-out-of-bounds-in-dbFindBits.patch
