perf/core: Fix child_total_time_enabled accounting bug at task exit (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32213,6 +32213,7 @@
 	patches.suse/drm-amd-Handle-being-compiled-without-SI-or-CIK-supp.patch
 	patches.suse/drm-amd-display-prevent-hang-on-link-training-fail.patch
 	patches.suse/drm-amdgpu-gfx11-fix-num_mec.patch
+	patches.suse/perf-core-Fix-child_total_time_enabled-accounting-bug-at-t.patch
 	patches.suse/tools-power-turbostat-Increase-CPU_SUBSET_MAXCPUS-to-8192.patch
 	patches.suse/tools-power-turbostat-report-CoreThr-per-measurement-interval.patch
 	patches.suse/cgroup-cpuset-Fix-race-between-newly-created-partition-and.patch
