--- a/series.conf
+++ b/series.conf
@@ -33307,6 +33307,7 @@
 	patches.suse/ACPICA-Refuse-to-evaluate-a-method-if-arguments-are-.patch
 	patches.suse/sunrpc-handle-SVC_GARBAGE-during-svc-auth-processing-as-auth-error.patch
 	patches.suse/perf-Fix-sample-vs-do_exit.patch
+	patches.suse/perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.suse/genirq-irq_sim-Initialize-work-context-pointers-prop.patch
 	patches.suse/maple_tree-fix-MA_STATE_PREALLOC-flag-in-mas_preallocate.patch
 	patches.suse/btrfs-fix-a-race-between-renames-and-directory-loggi.patch
