perf/x86/intel/uncore: Fix the scale of IIO free running counters on ICX (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32362,6 +32362,7 @@
 	patches.suse/PCI-MSI-Add-an-option-to-write-MSIX-ENTRY_DATA-befor.patch
 	patches.suse/net-niu-Niu-requires-MSIX-ENTRY_DATA-fields-touch-be.patch
 	patches.suse/perf-x86-intel-uncore-Fix-the-scale-of-IIO-free-running-co.patch
+	patches.suse/perf-x86-intel-uncore-Fix-the-scale-of-IIO-free-running-co.patch-32c7f115
 	patches.suse/x86-cpu-amd-Fix-workaround-for-erratum-1054.patch
 	patches.suse/nfs-add-missing-selections-of-CONFIG_CRC32.patch
 	patches.suse/nfsd-decrease-sc_count-directly-if-fail-to-queue-dl_recall.patch
