--- a/series.conf
+++ b/series.conf
@@ -31532,6 +31532,7 @@
 	patches.suse/objtool-Fix-error-handling-inconsistencies-in-check.patch
 	patches.suse/sched-membarrier-Fix-redundant-load-of-membarrier_st.patch
 	patches.suse/perf-amd-ibs-Fix-config-to-sample-period-calculation-for-O.patch
+	patches.suse/perf-amd-ibs-Fix-perf_ibs_op.cnt_mask-for-CurCnt.patch
 	patches.suse/x86-mm-Fix-flush_tlb_range-when-used-for-zapping-normal-PM.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
