--- a/series.conf
+++ b/series.conf
@@ -31342,6 +31342,7 @@
 	patches.suse/hwmon-ntc_thermistor-Fix-the-ncpXXxh103-sensor-table.patch
 	patches.suse/hwmon-ad7314-Validate-leading-zero-bits-and-return-e.patch
 	patches.suse/hwmon-fix-a-NULL-vs-IS_ERR_OR_NULL-check-in-xgene_hw.patch
+	patches.suse/perf-core-Fix-pmus_lock-vs.-pmus_srcu-ordering.patch
 	patches.suse/sched-fair-Fix-potential-memory-corruption-in-child_cfs_rq_on_list.patch
 	patches.suse/ublk-set_params-properly-check-if-parameters-can-be-applie.patch
 	patches.suse/block-fix-conversion-of-GPT-partition-name-to-7-bit.patch
