--- a/series.conf
+++ b/series.conf
@@ -31534,6 +31534,7 @@
 	patches.suse/perf-amd-ibs-Fix-config-to-sample-period-calculation-for-O.patch
 	patches.suse/perf-amd-ibs-Fix-perf_ibs_op.cnt_mask-for-CurCnt.patch
 	patches.suse/perf-x86-intel-Apply-static-call-for-drain_pebs.patch
+	patches.suse/perf-x86-intel-Avoid-disable-PMU-if-cpuc-enabled-in-sample.patch
 	patches.suse/x86-mm-Fix-flush_tlb_range-when-used-for-zapping-normal-PM.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
