--- a/series.conf
+++ b/series.conf
@@ -28113,6 +28113,7 @@
 	patches.suse/fbdev-pxafb-Fix-possible-use-after-free-in-pxafb_tas.patch
 	patches.suse/perf-x86-intel-Allow-to-setup-LBR-for-counting-event-for-B.patch
 	patches.suse/perf-x86-intel-pt-Fix-sampling-synchronization.patch
+	patches.suse/perf-Extract-a-few-helpers.patch
 	patches.suse/bpf-Fix-use-after-free-in-bpf_uprobe_multi_link_attach.patch
 	patches.suse/powerpc-vdso-Fix-VDSO-data-access-when-running-in-a-.patch
 	patches.suse/jfs-UBSAN-shift-out-of-bounds-in-dbFindBits.patch
