drivers/perf: arm_spe: Use perf_allow_kernel() for permissions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27961,6 +27961,7 @@
 	patches.suse/arm64-signal-Fix-some-under-bracketed-UAPI-macros.patch
 	patches.suse/arm64-esr-Define-ESR_ELx_EC_-constants-as-UL.patch
 	patches.suse/drivers-perf-Fix-ali_drw_pmu-driver-interrupt-status.patch
+	patches.suse/drivers-perf-arm_spe-Use-perf_allow_kernel-for-permissions.patch
 	patches.suse/KVM-arm64-Invalidate-EL1-0-TLB-entries-for-all-VMIDs.patch
 	patches.suse/KVM-arm64-Release-pfn-i.e.-put-page-if-copying-MTE-t.patch
 	patches.suse/KVM-arm64-Disallow-copying-MTE-to-guest-memory-while.patch
