--- a/series.conf
+++ b/series.conf
@@ -30043,6 +30043,7 @@
 	patches.suse/x86-cpu-Add-Lunar-Lake-to-list-of-CPUs-with-a-broken-MONIT.patch
 	patches.suse/cacheinfo-Allocate-memory-during-CPU-hotplug-if-not-done-f.patch
 	patches.suse/x86-CPU-AMD-WARN-when-setting-EFER.AUTOIBRS-if-and-only-if.patch
+	patches.suse/perf-x86-intel-ds-Unconditionally-drain-PEBS-DS-when-chang.patch
 	patches.suse/tracing-eprobe-Fix-to-release-eprobe-when-failed-to-add-dy.patch
 	patches.suse/btrfs-fix-missing-snapshot-drew-unlock-when-root-is-.patch
 	patches.suse/btrfs-flush-delalloc-workers-queue-before-stopping-c.patch
