--- a/series.conf
+++ b/series.conf
@@ -32768,6 +32768,7 @@
 	patches.suse/powerpc-boot-Fix-build-with-gcc-15.patch
 	patches.suse/powerpc-kernel-Fix-ppc_save_regs-inclusion-in-build.patch
 	patches.suse/sched-rt-Fix-race-in-push_rt_task.patch
+	patches.suse/perf-Ensure-bpf_perf_link-path-is-properly-serialized.patch
 	patches.suse/x86-microcode-AMD-Do-not-return-error-when-microcode-updat.patch
 	patches.suse/x86-idle-Remove-MFENCEs-for-X86_BUG_CLFLUSH_MONITOR-in-mwa.patch
 	patches.suse/Documentation-rtla-Fix-duplicate-text-about-timerlat.patch
