perf/x86/amd: Warn only on new bits set (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29374,6 +29374,7 @@
 	patches.suse/locking-lockdep-Avoid-creating-new-name-string-liter.patch
 	patches.suse/cleanup-Remove-address-space-of-returned-pointer.patch
 	patches.suse/cleanup-Adjust-scoped_guard-macros-to-avoid-potentia.patch
+	patches.suse/perf-x86-amd-Warn-only-on-new-bits-set.patch
 	patches.suse/sched-Add-test_and_clear_wake_up_bit-and-atomic_dec_and_wake_up.patch
 	patches.suse/jiffies-Define-secs_to_jiffies.patch
 	patches.suse/clocksource-drivers-sp804-Make-user-selectable.patch
