--- a/series.conf
+++ b/series.conf
@@ -31266,6 +31266,7 @@
 	patches.suse/perf-core-Add-RCU-read-lock-protection-to-perf_itera.patch
 	patches.suse/perf-core-Order-the-PMU-list-to-fix-warning-about-unordered-pmu_ctx_list.patch
 	patches.suse/uprobes-Reject-the-shared-zeropage-in-uprobe_write_o.patch
+	patches.suse/perf-x86-Fix-low-freqency-setting-issue.patch
 	patches.suse/sched-core-Prevent-rescheduling-when-interrupts-are-.patch
 	patches.suse/i2c-npcm-disable-interrupt-enable-bit-before-devm_re.patch
 	patches.suse/i2c-ls2x-Fix-frequency-division-register-access.patch
