perf/amd/ibs: Fix ->config to sample period calculation for OP PMU (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31531,6 +31531,7 @@
 	patches.suse/lockdep-Don-t-disable-interrupts-on-RT-in-disable_ir.patch
 	patches.suse/objtool-Fix-error-handling-inconsistencies-in-check.patch
 	patches.suse/sched-membarrier-Fix-redundant-load-of-membarrier_st.patch
+	patches.suse/perf-amd-ibs-Fix-config-to-sample-period-calculation-for-O.patch
 	patches.suse/x86-mm-Fix-flush_tlb_range-when-used-for-zapping-normal-PM.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
