perf/ring_buffer: Allow the EPOLLRDNORM flag for poll (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31537,6 +31537,7 @@
 	patches.suse/perf-x86-intel-Avoid-disable-PMU-if-cpuc-enabled-in-sample.patch
 	patches.suse/perf-hw_breakpoint-Return-EOPNOTSUPP-for-unsupported-break.patch
 	patches.suse/perf-bpf-Robustify-perf_event_free_bpf_prog.patch
+	patches.suse/perf-ring_buffer-Allow-the-EPOLLRDNORM-flag-for-poll.patch
 	patches.suse/x86-mm-Fix-flush_tlb_range-when-used-for-zapping-normal-PM.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
