perf/x86/intel: Use better start period for frequency mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31268,6 +31268,7 @@
 	patches.suse/uprobes-Reject-the-shared-zeropage-in-uprobe_write_o.patch
 	patches.suse/perf-x86-Fix-low-freqency-setting-issue.patch
 	patches.suse/perf-core-Fix-low-freq-setting-via-IOC_PERIOD.patch
+	patches.suse/perf-x86-intel-Use-better-start-period-for-frequency-mode.patch
 	patches.suse/sched-core-Prevent-rescheduling-when-interrupts-are-.patch
 	patches.suse/i2c-npcm-disable-interrupt-enable-bit-before-devm_re.patch
 	patches.suse/i2c-ls2x-Fix-frequency-division-register-access.patch
