s390: Initialize psw mask in perf_arch_fetch_caller_regs() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28849,6 +28849,7 @@
 	patches.suse/KVM-s390-Change-virtual-to-physical-address-access-in-diag-0x258-handler.patch
 	patches.suse/s390-sclp-Deactivate-sclp-after-all-its-users.patch
 	patches.suse/s390-sclp_vt220-Convert-newlines-to-CRLF-instead-of-LFCR.patch
+	patches.suse/s390-Initialize-psw-mask-in-perf_arch_fetch_caller_regs.patch
 	patches.suse/powerpc-powernv-Free-name-on-error-in-opal_event_ini.patch
 	patches.suse/iommu-vt-d-Fix-incorrect-pci_for_each_dma_alias-for-.patch
 	patches.suse/drm-msm-dpu-make-sure-phys-resources-are-properly-in.patch
