perf/amd: Prevent grouping of IBS events (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7578,6 +7578,7 @@
 	patches.suse/acpi-prmt-Use-EFI-runtime-sandbox-to-invoke-PRM-hand.patch
 	patches.suse/efi-runtime-wrappers-Clean-up-white-space-and-add-__.patch
 	patches.suse/x86-efistub-Fix-PCI-ROM-preservation-in-mixed-mode.patch
+	patches.suse/perf-amd-Prevent-grouping-of-IBS-events.patch
 	patches.suse/locking-arch-Avoid-variable-shadowing-in-local_try_cmpxchg.patch
 	patches.suse/perf-mem-Introduce-PERF_MEM_LVLNUM_UNC.patch
 	patches.suse/arm_pmu-Add-PERF_PMU_CAP_EXTENDED_HW_TYPE-capability.patch
