--- a/series.conf
+++ b/series.conf
@@ -9853,6 +9853,7 @@
 	patches.suse/scsi-smartpqi-Enhance-WWID-logging-logic.patch
 	patches.suse/scsi-smartpqi-Fix-smp_processor_id-call-trace-for-preempti.patch
 	patches.suse/scsi-smartpqi-Update-driver-version-to-2.1.34-035.patch
+	patches.suse/scsi-mpi3mr-Event-processing-debug-improvement.patch
 	patches.suse/scsi-dc395x-Remove-leftover-if-statement-in-reselect.patch
 	patches.suse/scsi-ufs-mcq-Delete-ufshcd_release_scsi_cmd-in-ufshcd_mcq_.patch
 	patches.suse/clk-bcm-rpi-Add-NULL-check-in-raspberrypi_clk_regist.patch
