--- a/series.conf
+++ b/series.conf
@@ -12403,6 +12403,7 @@
 	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
+	patches.suse/scsi-mpi3mr-Fix-device-loss-during-enclosure-reboot-due-to.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
