--- a/series.conf
+++ b/series.conf
@@ -12404,6 +12404,7 @@
 	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-mpi3mr-Fix-device-loss-during-enclosure-reboot-due-to.patch
+	patches.suse/scsi-mpi3mr-Fix-controller-init-failure-on-fault-during-qu.patch
 	patches.suse/scsi-fc-Avoid-Wflex-array-member-not-at-end-warnings.patch
 	patches.suse/scsi-qla2xxx-Use-secs_to_jiffies-instead-of-msecs_to.patch
 	patches.suse/scsi-lpfc-Use-int-type-to-store-negative-error-codes.patch
