--- a/series.conf
+++ b/series.conf
@@ -50341,6 +50341,7 @@
 	patches.suse/media-dvb-frontends-dib3000mb-fix-uninit-value-in-di.patch
 	patches.suse/selftests-bpf-Use-asm-constraint-m-for-LoongArch.patch
 	patches.suse/tcp_bpf-Charge-receive-socket-buffer-in-bpf_tcp_ingr.patch
+	patches.suse/skmsg-Return-copied-bytes-in-sk_msg_memcopy_from_ite.patch
 	patches.suse/tcp_bpf-Fix-copied-value-in-tcp_bpf_sendmsg.patch
 	patches.suse/zram-refuse-to-use-zero-sized-block-device-as-backing-device.patch
 	patches.suse/zram-fix-uninitialized-ZRAM-not-releasing-backing-device.patch
