skmsg: Return copied bytes in sk_msg_memcopy_from_iter (bsc#1250650).

--- a/series.conf
+++ b/series.conf
@@ -3288,6 +3288,7 @@
 	patches.suse/selftests-bpf-Fix-compilation-error-in-get_uprobe_of.patch
 	patches.suse/tcp_bpf-Charge-receive-socket-buffer-in-bpf_tcp_ingr.patch
 	patches.suse/tcp_bpf-Add-sk_rmem_alloc-related-logic-for-tcp_bpf-.patch
+	patches.suse/skmsg-Return-copied-bytes-in-sk_msg_memcopy_from_ite.patch
 	patches.suse/tcp_bpf-Fix-copied-value-in-tcp_bpf_sendmsg.patch
 	patches.suse/bpf-Check-negative-offsets-in-__bpf_skb_min_len.patch
 	patches.suse/selftests-memfd-run-sysctl-tests-when-PID-namespace-.patch
