skmsg: Return copied bytes in sk_msg_memcopy_from_iter (bsc#1250650).

--- a/series.conf
+++ b/series.conf
@@ -30169,6 +30169,7 @@
 	patches.suse/smb-client-fix-TCP-timers-deadlock-after-rmmod.patch
 	patches.suse/media-dvb-frontends-dib3000mb-fix-uninit-value-in-di.patch
 	patches.suse/tcp_bpf-Charge-receive-socket-buffer-in-bpf_tcp_ingr.patch
+	patches.suse/skmsg-Return-copied-bytes-in-sk_msg_memcopy_from_ite.patch
 	patches.suse/zram-refuse-to-use-zero-sized-block-device-as-backing-device.patch
 	patches.suse/zram-fix-uninitialized-ZRAM-not-releasing-backing-device.patch
 	patches.suse/nilfs2-prevent-use-of-deleted-inode.patch
