--- a/series.conf
+++ b/series.conf
@@ -12261,6 +12261,7 @@
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
+	patches.suse/cpufreq-intel_pstate-Fix-object-lifecycle-issue-in-update_qos_request.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
