--- a/series.conf
+++ b/series.conf
@@ -8699,6 +8699,7 @@
 	patches.suse/USB-serial-option-add-Sierra-Wireless-EM9291.patch
 	patches.suse/USB-serial-ftdi_sio-add-support-for-Abacus-Electrics.patch
 	patches.suse/USB-serial-simple-add-OWON-HDS200-series-oscilloscop.patch
+	patches.suse/cpufreq-sun50i-prevent-out-of-bounds-access.patch
 	patches.suse/cpufreq-Add-SM8650-to-cpufreq-dt-platdev-blocklist.patch
 	patches.suse/cpufreq-apple-soc-Fix-null-ptr-deref-in-apple_soc_cpufreq_get_rate.patch
 	patches.suse/cpufreq-scmi-Fix-null-ptr-deref-in-scmi_cpufreq_get_rate.patch
