cpufreq: armada-8k: Fix off by one in armada_8k_cpufreq_free_table() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10970,6 +10970,7 @@
 	patches.suse/cpufreq-Init-policy-rwsem-before-it-may-be-possibly-used.patch
 	patches.suse/cpufreq-Exit-governor-when-failed-to-start-old-governor.patch
 	patches.suse/cpufreq-armada-8k-make-both-cpu-masks-static.patch
+	patches.suse/cpufreq-armada-8k-Fix-off-by-one-in-armada_8k_cpufreq_free_table.patch
 	patches.suse/cpufreq-CPPC-Mark-driver-with-NEED_UPDATE_LIMITS-flag.patch
 	patches.suse/PM-devfreq-governor-Replace-sscanf-with-kstrtoul-in-.patch
 	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
