cpufreq: Make drivers using CPUFREQ_ETERNAL specify transition latency (stable-fixes git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12505,6 +12505,7 @@
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
+	patches.suse/cpufreq-Make-drivers-using-CPUFREQ_ETERNAL-specify-transition-latency.patch
 	patches.suse/cpufreq-CPPC-Avoid-using-CPUFREQ_ETERNAL-as-transition-delay.patch
 	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-i.patch
