cpufreq: scmi: Skip SCMI devices that aren't used by the CPUs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32985,6 +32985,7 @@
 	patches.suse/RDMA-iwcm-Fix-use-after-free-of-work-objects-after-c.patch
 	patches.suse/RDMA-cma-Fix-hang-when-cma_netevent_callback-fails-t.patch
 	patches.suse/iommu-Protect-against-overflow-in-iommu_pgsize.patch
+	patches.suse/cpufreq-scmi-Skip-SCMI-devices-that-aren-t-used-by-the-CPUs.patch
 	patches.suse/acpi-cpufreq-Fix-nominal_freq-units-to-KHz-in-get_ma.patch
 	patches.suse/Revert-bus-ti-sysc-Probe-for-l4_wkup-and-l4_cfg-inte.patch
 	patches.suse/soc-qcom-smp2p-Fix-fallback-to-qcom-ipc-parse.patch
