cpufreq: intel_pstate: Fix object lifecycle issue in update_qos_request() (stable-fixes git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34467,6 +34467,7 @@
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
+	patches.suse/cpufreq-intel_pstate-Fix-object-lifecycle-issue-in-update_qos_request.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
