--- a/series.conf
+++ b/series.conf
@@ -23196,6 +23196,7 @@
 	patches.suse/ACPI-resource-Do-IRQ-override-on-Lunnen-Ground-lapto.patch
 	patches.suse/ACPI-resource-Add-MAIBENBEN-X577-to-irq1_edge_low_fo.patch
 	patches.suse/ACPI-processor_idle-Fix-memory-leak-in-acpi_processo.patch
+	patches.suse/ACPI-x86-Move-acpi_quirk_skip_serdev_enumeration-out-of-CONFIG_X86_ANDROID_TABLETS.patch
 	patches.suse/thermal-intel-Fix-intel_tcc_get_temp-to-support-nega.patch
 	patches.suse/iwlwifi-mvm-Drop-unused-fw_trips_index-from-iwl_mvm_.patch
 	patches.suse/iwlwifi-mvm-Populate-trip-table-before-registering-t.patch
