cpufreq: CPPC: fix perf_to_khz/khz_to_perf conversion exception (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29002,6 +29002,7 @@
 	patches.suse/ASoC-rt722-sdca-increase-clk_stop_timeout-to-fix-clo.patch
 	patches.suse/ASoC-fsl_micfil-Add-sample-rate-constraint.patch
 	patches.suse/ata-libata-Set-DID_TIME_OUT-for-commands-that-actual.patch
+	patches.suse/cpufreq-CPPC-fix-perf_to_khz-khz_to_perf-conversion-exception.patch
 	patches.suse/powercap-dtpm_devfreq-Fix-error-check-against-dev_pm_qos_add_request.patch
 	patches.suse/ACPI-PRM-Find-EFI_MEMORY_RUNTIME-block-for-PRM-handl.patch
 	patches.suse/ACPI-PRM-Clean-up-guid-type-in-struct-prm_handler_in.patch
