ACPI: APEI: GHES: add TAINT_MACHINE_CHECK on GHES panic path (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33648,6 +33648,7 @@
 	patches.suse/pm-cpupower-Fix-the-snapshot-order-of-tsc-mperf-cloc.patch
 	patches.suse/ACPI-processor-fix-acpi_object-initialization.patch
 	patches.suse/ACPI-processor-perflib-Fix-initial-_PPC-limit-applic.patch
+	patches.suse/ACPI-APEI-GHES-add-TAINT_MACHINE_CHECK-on-GHES-panic-path.patch
 	patches.suse/ACPI-APEI-send-SIGBUS-to-current-task-if-synchronous.patch
 	patches.suse/ACPI-LPSS-Remove-AudioDSP-related-ID.patch
 	patches.suse/ACPI-PRM-Reduce-unnecessary-printing-to-avoid-user-c.patch
