--- a/series.conf
+++ b/series.conf
@@ -32437,6 +32437,7 @@
 	patches.suse/drm-amd-display-Fix-gpu-reset-in-multidisplay-config.patch
 	patches.suse/drm-amd-display-Force-full-update-in-gpu-reset.patch
 	patches.suse/irqchip-gic-v2m-Prevent-use-after-free-of-gicv2m_get.patch
+	patches.suse/perf-x86-Fix-non-sampling-counting-events-on-certain-x86-p.patch
 	patches.suse/msft-hv-3234-tools-hv-update-route-parsing-in-kvp-daemon.patch
 	patches.suse/powerpc-boot-Check-for-ld-option-support.patch
 	patches.suse/powerpc-boot-Fix-dash-warning.patch
