--- a/series.conf
+++ b/series.conf
@@ -33451,6 +33451,7 @@
 	patches.suse/x86-mce-amd-Add-default-names-for-MCA-banks-and-blocks.patch
 	patches.suse/x86-mce-amd-Fix-threshold-limit-reset.patch
 	patches.suse/x86-mce-Make-sure-CMCI-banks-are-cleared-during-shutdown-o.patch
+	patches.suse/perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock-protected-re.patch
 	patches.suse/perf-Revert-to-requiring-CAP_SYS_ADMIN-for-uprobes.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
