ACPI: thermal: Execute _SCP before reading trip points (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53590,6 +53590,7 @@
 	patches.suse/power-supply-bq27xxx-Retrieve-again-when-busy.patch
 	patches.suse/mmc-Add-quirk-to-disable-DDR50-tuning.patch
 	patches.suse/ACPI-OSI-Stop-advertising-support-for-3.0-_SCP-Exten.patch
+	patches.suse/ACPI-thermal-Execute-_SCP-before-reading-trip-points.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Fix-debugfs-unregister.patch
 	patches.suse/ACPI-bus-Bail-out-if-acpi_kobj-registration-fails.patch
 	patches.suse/ACPICA-fix-acpi-operand-cache-leak-in-dswstate.c.patch
