ACPI: resource: fix a typo for MECHREVO in irq1_edge_low_force_override (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53601,6 +53601,7 @@
 	patches.suse/ACPICA-Avoid-sequence-overread-in-call-to-strncmp.patch
 	patches.suse/ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/ACPI-EC-Add-device-to-acpi_ec_no_wakeup-qurik-list.patch
+	patches.suse/ACPI-resource-fix-a-typo-for-MECHREVO-in-irq1_edge_low_force_override.patch
 	patches.suse/ACPI-Add-missing-prototype-for-non-CONFIG_SUSPEND-CO.patch
 	patches.suse/Documentation-ACPI-Use-all-string-data-node-referenc.patch
 	patches.suse/PM-runtime-fix-denying-of-auto-suspend-in-pm_suspend.patch
