minixfs: Verify inode mode when loading from disk (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11247,6 +11247,7 @@
 	patches.kernel.org/6.12.54-263-irqchip-sifive-plic-Make-use-of-__assign_bit.patch
 	patches.kernel.org/6.12.54-264-irqchip-sifive-plic-Avoid-interrupt-ID-0-hand.patch
 	patches.kernel.org/6.12.54-265-copy_file_range-limit-size-if-in-compat-mode.patch
+	patches.kernel.org/6.12.54-266-minixfs-Verify-inode-mode-when-loading-from-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
