--- a/series.conf
+++ b/series.conf
@@ -11167,6 +11167,7 @@
 	patches.kernel.org/6.12.54-183-PCI-keystone-Use-devm_request_irq-to-free-ks-.patch
 	patches.kernel.org/6.12.54-184-PCI-rcar-gen4-Fix-PHY-initialization.patch
 	patches.kernel.org/6.12.54-185-PCI-rcar-host-Drop-PMSR-spinlock.patch
+	patches.kernel.org/6.12.54-186-PCI-rcar-host-Convert-struct-rcar_msi-mask_lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
