kernel/sys.c: fix the racy usage of task_lock(tsk->group_leader) in sys_prlimit64() paths (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11126,6 +11126,7 @@
 	patches.kernel.org/6.12.54-142-init-handle-bootloader-identifier-in-kernel-p.patch
 	patches.kernel.org/6.12.54-143-iio-imu-inv_icm42600-Drop-redundant-pm_runtim.patch
 	patches.kernel.org/6.12.54-144-iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supp.patch
+	patches.kernel.org/6.12.54-145-kernel-sys.c-fix-the-racy-usage-of-task_lock-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
