--- a/series.conf
+++ b/series.conf
@@ -11032,6 +11032,7 @@
 	patches.kernel.org/6.12.54-048-drm-xe-hw_engine_group-Fix-double-write-lock-.patch
 	patches.kernel.org/6.12.54-049-s390-cio-Update-purge-function-to-unregister-.patch
 	patches.kernel.org/6.12.54-050-drm-vmwgfx-Fix-a-null-ptr-access-in-the-curso.patch
+	patches.kernel.org/6.12.54-051-drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
