--- a/series.conf
+++ b/series.conf
@@ -11110,6 +11110,7 @@
 	patches.kernel.org/6.12.54-126-cpufreq-intel_pstate-Fix-object-lifecycle-iss.patch
 	patches.kernel.org/6.12.54-127-crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 	patches.kernel.org/6.12.54-128-crypto-atmel-Fix-dma_unmap_sg-direction.patch
+	patches.kernel.org/6.12.54-129-crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
