sparc64: fix hugetlb for sun4u (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11145,6 +11145,7 @@
 	patches.kernel.org/6.12.54-161-scsi-hpsa-Fix-potential-memory-leak-in-hpsa_b.patch
 	patches.kernel.org/6.12.54-162-scsi-sd-Fix-build-warning-in-sd_revalidate_di.patch
 	patches.kernel.org/6.12.54-163-sctp-Fix-MAC-comparison-to-be-constant-time.patch
+	patches.kernel.org/6.12.54-164-sparc64-fix-hugetlb-for-sun4u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
