nfsd: nfserr_jukebox in nlm_fopen should lead to a retry (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11192,6 +11192,7 @@
 	patches.kernel.org/6.12.54-208-mm-damon-vaddr-do-not-repeat-pte_offset_map_l.patch
 	patches.kernel.org/6.12.54-209-mm-damon-lru_sort-use-param_ctx-for-damon_att.patch
 	patches.kernel.org/6.12.54-210-NFSD-Fix-destination-buffer-size-in-nfsd4_ssc.patch
+	patches.kernel.org/6.12.54-211-nfsd-nfserr_jukebox-in-nlm_fopen-should-lead-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
