PCI: j721e: Fix programming sequence of "strap" settings (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11163,6 +11163,7 @@
 	patches.kernel.org/6.12.54-179-PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.kernel.org/6.12.54-180-PCI-AER-Fix-missing-uevent-on-recovery-when-a.patch
 	patches.kernel.org/6.12.54-181-PCI-AER-Support-errors-introduced-by-PCIe-r6..patch
+	patches.kernel.org/6.12.54-182-PCI-j721e-Fix-programming-sequence-of-strap-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
