gpio: wcd934x: mark the GPIO controller as sleeping (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11062,6 +11062,7 @@
 	patches.kernel.org/6.12.54-078-smb-client-fix-missing-timestamp-updates-afte.patch
 	patches.kernel.org/6.12.54-079-cifs-Query-EA-LXMOD-in-cifs_query_path_info-f.patch
 	patches.kernel.org/6.12.54-080-tpm_tis-Fix-incorrect-arguments-in-tpm_tis_pr.patch
+	patches.kernel.org/6.12.54-081-gpio-wcd934x-mark-the-GPIO-controller-as-slee.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
