memory: samsung: exynos-srom: Fix of_iomap leak in exynos_srom_probe (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11152,6 +11152,7 @@
 	patches.kernel.org/6.12.54-168-mtd-rawnand-fsmc-Default-to-autodetect-buswid.patch
 	patches.kernel.org/6.12.54-169-mmc-core-SPI-mode-remove-cmd7.patch
 	patches.kernel.org/6.12.54-170-mmc-mmc_spi-multiple-block-read-remove-read-c.patch
+	patches.kernel.org/6.12.54-171-memory-samsung-exynos-srom-Fix-of_iomap-leak-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
