rtc: x1205: Fix Xicor X1205 vendor prefix (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11002,6 +11002,7 @@
 	patches.kernel.org/6.12.54-018-clk-at91-peripheral-fix-return-value.patch
 	patches.kernel.org/6.12.54-019-clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_m.patch
 	patches.kernel.org/6.12.54-020-perf-util-Fix-compression-checks-returning-1-.patch
+	patches.kernel.org/6.12.54-021-rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
