powerpc/pseries/msi: Fix potential underflow and leak issue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11138,6 +11138,7 @@
 	patches.kernel.org/6.12.54-154-pinctrl-samsung-Drop-unused-S3C24xx-driver-da.patch
 	patches.kernel.org/6.12.54-155-power-supply-max77976_charger-fix-constant-cu.patch
 	patches.kernel.org/6.12.54-156-powerpc-powernv-pci-Fix-underflow-and-leak-is.patch
+	patches.kernel.org/6.12.54-157-powerpc-pseries-msi-Fix-potential-underflow-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
