--- a/series.conf
+++ b/series.conf
@@ -11077,6 +11077,7 @@
 	patches.kernel.org/6.12.54-093-arm64-kprobes-call-set_memory_rox-for-kprobe-.patch
 	patches.kernel.org/6.12.54-094-ARM-AM33xx-Implement-TI-advisory-1.0.36-EMU0-.patch
 	patches.kernel.org/6.12.54-095-ARM-OMAP2-pm33xx-core-ix-device-node-referenc.patch
+	patches.kernel.org/6.12.54-096-perf-arm-cmn-Fix-CMN-S3-DTM-offset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
