clk: qcom: tcsrcc-x1e80100: Set the bi_tcxo as parent to eDP refclk (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11105,6 +11105,7 @@
 	patches.kernel.org/6.12.54-121-btrfs-avoid-potential-out-of-bounds-in-btrfs_.patch
 	patches.kernel.org/6.12.54-122-bus-mhi-ep-Fix-chained-transfer-handling-in-r.patch
 	patches.kernel.org/6.12.54-123-bus-mhi-host-Do-not-use-uninitialized-dev-poi.patch
+	patches.kernel.org/6.12.54-124-clk-qcom-tcsrcc-x1e80100-Set-the-bi_tcxo-as-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
