rtc: interface: Fix long-standing race when setting alarm (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11154,6 +11154,7 @@
 	patches.kernel.org/6.12.54-170-mmc-mmc_spi-multiple-block-read-remove-read-c.patch
 	patches.kernel.org/6.12.54-171-memory-samsung-exynos-srom-Fix-of_iomap-leak-.patch
 	patches.kernel.org/6.12.54-172-rtc-interface-Ensure-alarm-irq-is-enabled-whe.patch
+	patches.kernel.org/6.12.54-173-rtc-interface-Fix-long-standing-race-when-set.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
