--- a/series.conf
+++ b/series.conf
@@ -11014,6 +11014,7 @@
 	patches.kernel.org/6.12.54-030-perf-test-Don-t-leak-workload-gopipe-in-PERF_.patch
 	patches.kernel.org/6.12.54-031-perf-test-Add-a-test-for-default-perf-stat-co.patch
 	patches.kernel.org/6.12.54-032-perf-tools-Add-fallback-for-exclude_guest.patch
+	patches.kernel.org/6.12.54-033-perf-evsel-Ensure-the-fallback-message-is-alw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
