perf test shell lbr: Avoid failures with perf event paranoia (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11009,6 +11009,7 @@
 	patches.kernel.org/6.12.54-025-perf-arm_spe-Correct-memory-level-for-remote-.patch
 	patches.kernel.org/6.12.54-026-perf-vendor-events-arm64-AmpereOneX-Fix-typo-.patch
 	patches.kernel.org/6.12.54-027-perf-test-Update-sysfs-path-for-core-PMU-caps.patch
+	patches.kernel.org/6.12.54-028-perf-test-shell-lbr-Avoid-failures-with-perf-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
