mfd: intel_soc_pmic_chtdc_ti: Set use_single_read regmap_config flag (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11216,6 +11216,7 @@
 	patches.kernel.org/6.12.54-232-ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-.patch
 	patches.kernel.org/6.12.54-233-mfd-intel_soc_pmic_chtdc_ti-Fix-invalid-regma.patch
 	patches.kernel.org/6.12.54-234-mfd-intel_soc_pmic_chtdc_ti-Drop-unneeded-ass.patch
+	patches.kernel.org/6.12.54-235-mfd-intel_soc_pmic_chtdc_ti-Set-use_single_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
