--- a/series.conf
+++ b/series.conf
@@ -11068,6 +11068,7 @@
 	patches.kernel.org/6.12.54-084-s390-vmlinux.lds.S-Move-.vmlinux.info-to-end-.patch
 	patches.kernel.org/6.12.54-085-ACPI-property-Fix-buffer-properties-extractio.patch
 	patches.kernel.org/6.12.54-086-ACPI-TAD-Add-missing-sysfs_remove_group-for-A.patch
+	patches.kernel.org/6.12.54-087-ACPI-debug-fix-signedness-issues-in-read-writ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
