--- a/series.conf
+++ b/series.conf
@@ -11258,6 +11258,7 @@
 	patches.kernel.org/6.12.54-274-nfsd-fix-__fh_verify-for-localio.patch
 	patches.kernel.org/6.12.54-275-nfsd-fix-access-checking-for-NLM-under-XPRTSE.patch
 	patches.kernel.org/6.12.54-276-ASoC-SOF-ipc4-pcm-fix-start-offset-calculatio.patch
+	patches.kernel.org/6.12.54-277-mount-handle-NULL-values-in-mnt_ns_release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
