pinctrl: samsung: Drop unused S3C24xx driver data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11135,6 +11135,7 @@
 	patches.kernel.org/6.12.54-151-parisc-don-t-reference-obsolete-termio-struct.patch
 	patches.kernel.org/6.12.54-152-parisc-Remove-spurious-if-statement-from-raw_.patch
 	patches.kernel.org/6.12.54-153-nvme-pci-Add-TUXEDO-IBS-Gen8-to-Samsung-sleep.patch
+	patches.kernel.org/6.12.54-154-pinctrl-samsung-Drop-unused-S3C24xx-driver-da.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
