--- a/series.conf
+++ b/series.conf
@@ -11242,6 +11242,7 @@
 	patches.kernel.org/6.12.54-258-mm-rmap-fix-soft-dirty-and-uffd-wp-bit-loss-w.patch
 	patches.kernel.org/6.12.54-259-s390-bpf-Centralize-frame-offset-calculations.patch
 	patches.kernel.org/6.12.54-260-s390-bpf-Describe-the-frame-using-a-struct-in.patch
+	patches.kernel.org/6.12.54-261-s390-bpf-Write-back-tail-call-counter-for-BPF.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
