ipmi: Fix handling of messages with provided receive message pointer (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11238,6 +11238,7 @@
 	patches.kernel.org/6.12.54-254-ACPI-property-Do-not-pass-NULL-handles-to-acp.patch
 	patches.kernel.org/6.12.54-255-mptcp-pm-in-kernel-usable-client-side-with-C-.patch
 	patches.kernel.org/6.12.54-256-ipmi-Rework-user-message-limit-handling.patch
+	patches.kernel.org/6.12.54-257-ipmi-Fix-handling-of-messages-with-provided-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
