--- a/series.conf
+++ b/series.conf
@@ -11051,6 +11051,7 @@
 	patches.kernel.org/6.12.54-067-mailbox-mtk-cmdq-Switch-to-pm_runtime_put_aut.patch
 	patches.kernel.org/6.12.54-068-mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-.patch
 	patches.kernel.org/6.12.54-069-drm-amdgpu-Add-additional-DCE6-SCL-registers.patch
+	patches.kernel.org/6.12.54-070-drm-amd-display-Add-missing-DCE6-SCL_HORZ_FIL.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
