PCI/sysfs: Ensure devices are powered for config reads (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11158,6 +11158,7 @@
 	patches.kernel.org/6.12.54-174-rseq-selftests-Use-weak-symbol-reference-not-.patch
 	patches.kernel.org/6.12.54-175-PCI-xilinx-nwl-Fix-ECAM-programming.patch
 	patches.kernel.org/6.12.54-176-PCI-tegra-Convert-struct-tegra_msi-mask_lock-.patch
+	patches.kernel.org/6.12.54-177-PCI-sysfs-Ensure-devices-are-powered-for-conf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
