xen/events: Update virq_to_irq on migration (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11082,6 +11082,7 @@
 	patches.kernel.org/6.12.54-098-xen-events-Cleanup-find_virq-return-codes.patch
 	patches.kernel.org/6.12.54-099-xen-manage-Fix-suspend-error-path.patch
 	patches.kernel.org/6.12.54-100-xen-events-Return-EEXIST-for-bound-VIRQs.patch
+	patches.kernel.org/6.12.54-101-xen-events-Update-virq_to_irq-on-migration.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
