nfsd: fix __fh_verify for localio (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11255,6 +11255,7 @@
 	patches.kernel.org/6.12.54-271-writeback-Avoid-excessively-long-inode-switch.patch
 	patches.kernel.org/6.12.54-272-sched-fair-Block-delayed-tasks-on-throttled-h.patch
 	patches.kernel.org/6.12.54-273-perf-test-stat-Avoid-hybrid-assumption-when-v.patch
+	patches.kernel.org/6.12.54-274-nfsd-fix-__fh_verify-for-localio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
