--- a/series.conf
+++ b/series.conf
@@ -11123,6 +11123,7 @@
 	patches.kernel.org/6.12.54-139-iio-frequency-adf4350-Fix-prescaler-usage.patch
 	patches.kernel.org/6.12.54-140-iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
 	patches.kernel.org/6.12.54-141-iio-xilinx-ams-Unmask-interrupts-after-updati.patch
+	patches.kernel.org/6.12.54-142-init-handle-bootloader-identifier-in-kernel-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
