--- a/series.conf
+++ b/series.conf
@@ -11038,6 +11038,7 @@
 	patches.kernel.org/6.12.54-054-tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_c.patch
 	patches.kernel.org/6.12.54-055-net-mscc-ocelot-Fix-use-after-free-caused-by-.patch
 	patches.kernel.org/6.12.54-056-ice-ice_adapter-release-xa-entry-on-adapter-a.patch
+	patches.kernel.org/6.12.54-057-net-fsl_pq_mdio-Fix-device-node-reference-lea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
