--- a/series.conf
+++ b/series.conf
@@ -11063,6 +11063,7 @@
 	patches.kernel.org/6.12.54-079-cifs-Query-EA-LXMOD-in-cifs_query_path_info-f.patch
 	patches.kernel.org/6.12.54-080-tpm_tis-Fix-incorrect-arguments-in-tpm_tis_pr.patch
 	patches.kernel.org/6.12.54-081-gpio-wcd934x-mark-the-GPIO-controller-as-slee.patch
+	patches.kernel.org/6.12.54-082-bpf-Avoid-RCU-context-warning-when-unpinning-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
