--- a/series.conf
+++ b/series.conf
@@ -11064,6 +11064,7 @@
 	patches.kernel.org/6.12.54-080-tpm_tis-Fix-incorrect-arguments-in-tpm_tis_pr.patch
 	patches.kernel.org/6.12.54-081-gpio-wcd934x-mark-the-GPIO-controller-as-slee.patch
 	patches.kernel.org/6.12.54-082-bpf-Avoid-RCU-context-warning-when-unpinning-.patch
+	patches.kernel.org/6.12.54-083-s390-vmlinux.lds.S-Reorder-sections.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
