ASoC: SOF: ipc4-topology: Account for different ChainDMA host buffer size (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11023,6 +11023,7 @@
 	patches.kernel.org/6.12.54-039-cpufreq-tegra186-Set-target-frequency-for-all.patch
 	patches.kernel.org/6.12.54-040-scsi-mvsas-Fix-use-after-free-bugs-in-mvs_wor.patch
 	patches.kernel.org/6.12.54-041-ASoC-SOF-ipc4-topology-Correct-the-minimum-ho.patch
+	patches.kernel.org/6.12.54-042-ASoC-SOF-ipc4-topology-Account-for-different-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
