nfsd: Fix NFSD_MAY_BYPASS_GSS and NFSD_MAY_BYPASS_GSS_ON_ROOT (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11224,6 +11224,7 @@
 	patches.kernel.org/6.12.54-240-arm64-mte-Do-not-flag-the-zero-page-as-PG_mte.patch
 	patches.kernel.org/6.12.54-241-x86-mtrr-Rename-mtrr_overwrite_state-to-guest.patch
 	patches.kernel.org/6.12.54-242-x86-kvm-Force-legacy-PCI-hole-to-UC-when-over.patch
+	patches.kernel.org/6.12.54-243-nfsd-Fix-NFSD_MAY_BYPASS_GSS-and-NFSD_MAY_BYP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
