--- a/series.conf
+++ b/series.conf
@@ -11232,6 +11232,7 @@
 	patches.kernel.org/6.12.54-248-ACPI-battery-allocate-driver-data-through-dev.patch
 	patches.kernel.org/6.12.54-249-ACPI-battery-initialize-mutexes-through-devm_.patch
 	patches.kernel.org/6.12.54-250-ACPI-battery-Check-for-error-code-from-devm_m.patch
+	patches.kernel.org/6.12.54-251-ACPI-battery-Add-synchronization-between-inte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
