tools build: Align warning options with perf (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11039,6 +11039,7 @@
 	patches.kernel.org/6.12.54-055-net-mscc-ocelot-Fix-use-after-free-caused-by-.patch
 	patches.kernel.org/6.12.54-056-ice-ice_adapter-release-xa-entry-on-adapter-a.patch
 	patches.kernel.org/6.12.54-057-net-fsl_pq_mdio-Fix-device-node-reference-lea.patch
+	patches.kernel.org/6.12.54-058-tools-build-Align-warning-options-with-perf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
