media: lirc: Fix error handling in lirc_register() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11095,6 +11095,7 @@
 	patches.kernel.org/6.12.54-111-media-vivid-fix-disappearing-Vendor-Command-W.patch
 	patches.kernel.org/6.12.54-112-media-ti-j721e-csi2rx-Use-devm_of_platform_po.patch
 	patches.kernel.org/6.12.54-113-media-ti-j721e-csi2rx-Fix-source-subdev-link-.patch
+	patches.kernel.org/6.12.54-114-media-lirc-Fix-error-handling-in-lirc_registe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
