--- a/series.conf
+++ b/series.conf
@@ -11191,6 +11191,7 @@
 	patches.kernel.org/6.12.54-207-mm-hugetlb-early-exit-from-hugetlb_pages_allo.patch
 	patches.kernel.org/6.12.54-208-mm-damon-vaddr-do-not-repeat-pte_offset_map_l.patch
 	patches.kernel.org/6.12.54-209-mm-damon-lru_sort-use-param_ctx-for-damon_att.patch
+	patches.kernel.org/6.12.54-210-NFSD-Fix-destination-buffer-size-in-nfsd4_ssc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
