--- a/series.conf
+++ b/series.conf
@@ -11180,6 +11180,7 @@
 	patches.kernel.org/6.12.54-196-selftests-mptcp-join-validate-C-flag-def-limi.patch
 	patches.kernel.org/6.12.54-197-s390-dasd-enforce-dma_alignment-to-ensure-pro.patch
 	patches.kernel.org/6.12.54-198-s390-dasd-Return-BLK_STS_INVAL-for-EINVAL-fro.patch
+	patches.kernel.org/6.12.54-199-s390-Add-Wno-pointer-sign-to-KBUILD_CFLAGS_DE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
