--- a/series.conf
+++ b/series.conf
@@ -11057,6 +11057,7 @@
 	patches.kernel.org/6.12.54-073-netfilter-nft_objref-validate-objref-and-objr.patch
 	patches.kernel.org/6.12.54-074-bridge-br_vlan_fill_forward_path_pvid-use-br_.patch
 	patches.kernel.org/6.12.54-075-selftests-netfilter-query-conntrack-state-to-.patch
+	patches.kernel.org/6.12.54-076-crypto-essiv-Check-ssize-for-decryption-and-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
