page_pool: Fix PP_MAGIC_MASK to avoid crashing on some 32-bit arches (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10988,6 +10988,7 @@
 	patches.kernel.org/6.12.54-004-rseq-Protect-event-mask-against-membarrier-IP.patch
 	patches.kernel.org/6.12.54-005-listmount-don-t-call-path_put-under-namespace.patch
 	patches.kernel.org/6.12.54-006-clocksource-drivers-clps711x-Fix-resource-lea.patch
+	patches.kernel.org/6.12.54-007-page_pool-Fix-PP_MAGIC_MASK-to-avoid-crashing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
