perf evsel: Avoid container_of on a NULL leader (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10996,6 +10996,7 @@
 	patches.kernel.org/6.12.54-012-asm-generic-io.h-Skip-trace-helpers-if-rwmmio.patch
 	patches.kernel.org/6.12.54-013-perf-disasm-Avoid-undefined-behavior-in-incre.patch
 	patches.kernel.org/6.12.54-014-perf-test-trace_btf_enum-Skip-if-permissions-.patch
+	patches.kernel.org/6.12.54-015-perf-evsel-Avoid-container_of-on-a-NULL-leade.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
