--- a/series.conf
+++ b/series.conf
@@ -11210,6 +11210,7 @@
 	patches.kernel.org/6.12.54-226-Squashfs-reject-negative-file-sizes-in-squash.patch
 	patches.kernel.org/6.12.54-227-tracing-Fix-race-condition-in-kprobe-initiali.patch
 	patches.kernel.org/6.12.54-228-mm-ksm-fix-incorrect-KSM-counter-handling-in-.patch
+	patches.kernel.org/6.12.54-229-PCI-endpoint-Remove-surplus-return-statement-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
