--- a/series.conf
+++ b/series.conf
@@ -11245,6 +11245,7 @@
 	patches.kernel.org/6.12.54-261-s390-bpf-Write-back-tail-call-counter-for-BPF.patch
 	patches.kernel.org/6.12.54-262-s390-bpf-Write-back-tail-call-counter-for-BPF.patch
 	patches.kernel.org/6.12.54-263-irqchip-sifive-plic-Make-use-of-__assign_bit.patch
+	patches.kernel.org/6.12.54-264-irqchip-sifive-plic-Avoid-interrupt-ID-0-hand.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
