drm/panthor: Fix memory leak in panthor_ioctl_group_create() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11096,6 +11096,7 @@
 	patches.kernel.org/6.12.54-112-media-ti-j721e-csi2rx-Use-devm_of_platform_po.patch
 	patches.kernel.org/6.12.54-113-media-ti-j721e-csi2rx-Fix-source-subdev-link-.patch
 	patches.kernel.org/6.12.54-114-media-lirc-Fix-error-handling-in-lirc_registe.patch
+	patches.kernel.org/6.12.54-115-drm-panthor-Fix-memory-leak-in-panthor_ioctl_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
