irqchip/sifive-plic: Make use of __assign_bit() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11244,6 +11244,7 @@
 	patches.kernel.org/6.12.54-260-s390-bpf-Describe-the-frame-using-a-struct-in.patch
 	patches.kernel.org/6.12.54-261-s390-bpf-Write-back-tail-call-counter-for-BPF.patch
 	patches.kernel.org/6.12.54-262-s390-bpf-Write-back-tail-call-counter-for-BPF.patch
+	patches.kernel.org/6.12.54-263-irqchip-sifive-plic-Make-use-of-__assign_bit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
