--- a/series.conf
+++ b/series.conf
@@ -11022,6 +11022,7 @@
 	patches.kernel.org/6.12.54-038-clk-tegra-do-not-overallocate-memory-for-bpmp.patch
 	patches.kernel.org/6.12.54-039-cpufreq-tegra186-Set-target-frequency-for-all.patch
 	patches.kernel.org/6.12.54-040-scsi-mvsas-Fix-use-after-free-bugs-in-mvs_wor.patch
+	patches.kernel.org/6.12.54-041-ASoC-SOF-ipc4-topology-Correct-the-minimum-ho.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
