PCI/ERR: Fix uevent on failure to recover (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11160,6 +11160,7 @@
 	patches.kernel.org/6.12.54-176-PCI-tegra-Convert-struct-tegra_msi-mask_lock-.patch
 	patches.kernel.org/6.12.54-177-PCI-sysfs-Ensure-devices-are-powered-for-conf.patch
 	patches.kernel.org/6.12.54-178-PCI-IOV-Add-PCI-rescan-remove-locking-when-en.patch
+	patches.kernel.org/6.12.54-179-PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
