s390/bpf: Describe the frame using a struct instead of constants (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11241,6 +11241,7 @@
 	patches.kernel.org/6.12.54-257-ipmi-Fix-handling-of-messages-with-provided-r.patch
 	patches.kernel.org/6.12.54-258-mm-rmap-fix-soft-dirty-and-uffd-wp-bit-loss-w.patch
 	patches.kernel.org/6.12.54-259-s390-bpf-Centralize-frame-offset-calculations.patch
+	patches.kernel.org/6.12.54-260-s390-bpf-Describe-the-frame-using-a-struct-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
