--- a/series.conf
+++ b/series.conf
@@ -11090,6 +11090,7 @@
 	patches.kernel.org/6.12.54-106-media-mc-Fix-MUST_CONNECT-handling-for-pads-w.patch
 	patches.kernel.org/6.12.54-107-media-pci-ivtv-Add-missing-check-after-DMA-ma.patch
 	patches.kernel.org/6.12.54-108-media-pci-mg4b-fix-uninitialized-iio-scan-dat.patch
+	patches.kernel.org/6.12.54-109-media-s5p-mfc-remove-an-unused-uninitialized-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
