--- a/series.conf
+++ b/series.conf
@@ -11084,6 +11084,7 @@
 	patches.kernel.org/6.12.54-100-xen-events-Return-EEXIST-for-bound-VIRQs.patch
 	patches.kernel.org/6.12.54-101-xen-events-Update-virq_to_irq-on-migration.patch
 	patches.kernel.org/6.12.54-102-firmware-meson_sm-fix-device-leak-at-probe.patch
+	patches.kernel.org/6.12.54-103-media-cec-extron-da-hd-4k-plus-drop-external-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
