arm64: dts: qcom: sdm845: Fix slimbam num-channels/ees (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11071,6 +11071,7 @@
 	patches.kernel.org/6.12.54-087-ACPI-debug-fix-signedness-issues-in-read-writ.patch
 	patches.kernel.org/6.12.54-088-arm64-dts-qcom-msm8916-Add-missing-MDSS-reset.patch
 	patches.kernel.org/6.12.54-089-arm64-dts-qcom-msm8939-Add-missing-MDSS-reset.patch
+	patches.kernel.org/6.12.54-090-arm64-dts-qcom-sdm845-Fix-slimbam-num-channel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
