--- a/series.conf
+++ b/series.conf
@@ -11066,6 +11066,7 @@
 	patches.kernel.org/6.12.54-082-bpf-Avoid-RCU-context-warning-when-unpinning-.patch
 	patches.kernel.org/6.12.54-083-s390-vmlinux.lds.S-Reorder-sections.patch
 	patches.kernel.org/6.12.54-084-s390-vmlinux.lds.S-Move-.vmlinux.info-to-end-.patch
+	patches.kernel.org/6.12.54-085-ACPI-property-Fix-buffer-properties-extractio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
