--- a/series.conf
+++ b/series.conf
@@ -11008,6 +11008,7 @@
 	patches.kernel.org/6.12.54-024-perf-arm-spe-Rename-the-common-data-source-en.patch
 	patches.kernel.org/6.12.54-025-perf-arm_spe-Correct-memory-level-for-remote-.patch
 	patches.kernel.org/6.12.54-026-perf-vendor-events-arm64-AmpereOneX-Fix-typo-.patch
+	patches.kernel.org/6.12.54-027-perf-test-Update-sysfs-path-for-core-PMU-caps.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
