--- a/series.conf
+++ b/series.conf
@@ -11162,6 +11162,7 @@
 	patches.kernel.org/6.12.54-178-PCI-IOV-Add-PCI-rescan-remove-locking-when-en.patch
 	patches.kernel.org/6.12.54-179-PCI-ERR-Fix-uevent-on-failure-to-recover.patch
 	patches.kernel.org/6.12.54-180-PCI-AER-Fix-missing-uevent-on-recovery-when-a.patch
+	patches.kernel.org/6.12.54-181-PCI-AER-Support-errors-introduced-by-PCIe-r6..patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
