--- a/series.conf
+++ b/series.conf
@@ -11131,6 +11131,7 @@
 	patches.kernel.org/6.12.54-147-lib-genalloc-fix-device-leak-in-of_gen_pool_g.patch
 	patches.kernel.org/6.12.54-148-loop-fix-backing-file-reference-leak-on-valid.patch
 	patches.kernel.org/6.12.54-149-of-unittest-Fix-device-reference-count-leak-i.patch
+	patches.kernel.org/6.12.54-150-openat2-don-t-trigger-automounts-with-RESOLVE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
