--- a/series.conf
+++ b/series.conf
@@ -11190,6 +11190,7 @@
 	patches.kernel.org/6.12.54-206-mm-page_alloc-only-set-ALLOC_HIGHATOMIC-for-_.patch
 	patches.kernel.org/6.12.54-207-mm-hugetlb-early-exit-from-hugetlb_pages_allo.patch
 	patches.kernel.org/6.12.54-208-mm-damon-vaddr-do-not-repeat-pte_offset_map_l.patch
+	patches.kernel.org/6.12.54-209-mm-damon-lru_sort-use-param_ctx-for-damon_att.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
