--- a/series.conf
+++ b/series.conf
@@ -10987,6 +10987,7 @@
 	patches.kernel.org/6.12.54-003-arm64-map-_text-_stext-virtual-address-range-.patch
 	patches.kernel.org/6.12.54-004-rseq-Protect-event-mask-against-membarrier-IP.patch
 	patches.kernel.org/6.12.54-005-listmount-don-t-call-path_put-under-namespace.patch
+	patches.kernel.org/6.12.54-006-clocksource-drivers-clps711x-Fix-resource-lea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
