--- a/series.conf
+++ b/series.conf
@@ -11184,6 +11184,7 @@
 	patches.kernel.org/6.12.54-200-slab-prevent-warnings-when-slab-obj_exts-vect.patch
 	patches.kernel.org/6.12.54-201-slab-mark-slab-obj_exts-allocation-failures-u.patch
 	patches.kernel.org/6.12.54-202-wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-r.patch
+	patches.kernel.org/6.12.54-203-wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A90.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
