--- a/series.conf
+++ b/series.conf
@@ -11006,6 +11006,7 @@
 	patches.kernel.org/6.12.54-022-rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.kernel.org/6.12.54-023-perf-arm_spe-Correct-setting-remote-access.patch
 	patches.kernel.org/6.12.54-024-perf-arm-spe-Rename-the-common-data-source-en.patch
+	patches.kernel.org/6.12.54-025-perf-arm_spe-Correct-memory-level-for-remote-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
