statmount: don't call path_put() under namespace semaphore (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11220,6 +11220,7 @@
 	patches.kernel.org/6.12.54-236-btrfs-fix-the-incorrect-max_bytes-value-for-f.patch
 	patches.kernel.org/6.12.54-237-cpufreq-Make-drivers-using-CPUFREQ_ETERNAL-sp.patch
 	patches.kernel.org/6.12.54-238-KVM-x86-Advertise-SRSO_USER_KERNEL_NO-to-user.patch
+	patches.kernel.org/6.12.54-239-statmount-don-t-call-path_put-under-namespace.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
