--- a/series.conf
+++ b/series.conf
@@ -11047,6 +11047,7 @@
 	patches.kernel.org/6.12.54-063-mailbox-zynqmp-ipi-Fix-out-of-bounds-access-i.patch
 	patches.kernel.org/6.12.54-064-mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
 	patches.kernel.org/6.12.54-065-bpf-Fix-metadata_dst-leak-__bpf_redirect_neig.patch
+	patches.kernel.org/6.12.54-066-mailbox-mtk-cmdq-mailbox-Switch-to-__pm_runti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
