ext4: free orphan info with kvfree (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11202,6 +11202,7 @@
 	patches.kernel.org/6.12.54-218-ext4-guard-against-EA-inode-refcount-underflo.patch
 	patches.kernel.org/6.12.54-219-ext4-validate-ea_ino-and-size-in-check_xattrs.patch
 	patches.kernel.org/6.12.54-220-ACPICA-Allow-to-skip-Global-Lock-initializati.patch
+	patches.kernel.org/6.12.54-221-ext4-free-orphan-info-with-kvfree.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
