--- a/series.conf
+++ b/series.conf
@@ -11170,6 +11170,7 @@
 	patches.kernel.org/6.12.54-186-PCI-rcar-host-Convert-struct-rcar_msi-mask_lo.patch
 	patches.kernel.org/6.12.54-187-PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_m.patch
 	patches.kernel.org/6.12.54-188-PCI-tegra194-Handle-errors-in-BPMP-response.patch
+	patches.kernel.org/6.12.54-189-PCI-tegra194-Reset-BARs-when-running-in-PCIe-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
