--- a/series.conf
+++ b/series.conf
@@ -11188,6 +11188,7 @@
 	patches.kernel.org/6.12.54-204-wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A75.patch
 	patches.kernel.org/6.12.54-205-mm-thp-fix-MTE-tag-mismatch-when-replacing-ze.patch
 	patches.kernel.org/6.12.54-206-mm-page_alloc-only-set-ALLOC_HIGHATOMIC-for-_.patch
+	patches.kernel.org/6.12.54-207-mm-hugetlb-early-exit-from-hugetlb_pages_allo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
