--- a/series.conf
+++ b/series.conf
@@ -11260,6 +11260,7 @@
 	patches.kernel.org/6.12.54-276-ASoC-SOF-ipc4-pcm-fix-start-offset-calculatio.patch
 	patches.kernel.org/6.12.54-277-mount-handle-NULL-values-in-mnt_ns_release.patch
 	patches.kernel.org/6.12.54-278-nfsd-decouple-the-xprtsec-policy-check-from-c.patch
+	patches.kernel.org/6.12.54-279-Linux-6.12.54.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
