mm/ksm: fix incorrect KSM counter handling in mm_struct during fork (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11209,6 +11209,7 @@
 	patches.kernel.org/6.12.54-225-Squashfs-add-additional-inode-sanity-checking.patch
 	patches.kernel.org/6.12.54-226-Squashfs-reject-negative-file-sizes-in-squash.patch
 	patches.kernel.org/6.12.54-227-tracing-Fix-race-condition-in-kprobe-initiali.patch
+	patches.kernel.org/6.12.54-228-mm-ksm-fix-incorrect-KSM-counter-handling-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
