ext4: verify orphan file size is not too big (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11194,6 +11194,7 @@
 	patches.kernel.org/6.12.54-210-NFSD-Fix-destination-buffer-size-in-nfsd4_ssc.patch
 	patches.kernel.org/6.12.54-211-nfsd-nfserr_jukebox-in-nlm_fopen-should-lead-.patch
 	patches.kernel.org/6.12.54-212-ext4-add-ext4_sb_bread_nofail-helper-function.patch
+	patches.kernel.org/6.12.54-213-ext4-verify-orphan-file-size-is-not-too-big.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
