--- a/series.conf
+++ b/series.conf
@@ -11147,6 +11147,7 @@
 	patches.kernel.org/6.12.54-163-sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.kernel.org/6.12.54-164-sparc64-fix-hugetlb-for-sun4u.patch
 	patches.kernel.org/6.12.54-165-sparc-fix-error-handling-in-scan_one_device.patch
+	patches.kernel.org/6.12.54-166-xtensa-simdisk-add-input-size-check-in-proc_w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
