--- a/series.conf
+++ b/series.conf
@@ -11256,6 +11256,7 @@
 	patches.kernel.org/6.12.54-272-sched-fair-Block-delayed-tasks-on-throttled-h.patch
 	patches.kernel.org/6.12.54-273-perf-test-stat-Avoid-hybrid-assumption-when-v.patch
 	patches.kernel.org/6.12.54-274-nfsd-fix-__fh_verify-for-localio.patch
+	patches.kernel.org/6.12.54-275-nfsd-fix-access-checking-for-NLM-under-XPRTSE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
