--- a/series.conf
+++ b/series.conf
@@ -11010,6 +11010,7 @@
 	patches.kernel.org/6.12.54-026-perf-vendor-events-arm64-AmpereOneX-Fix-typo-.patch
 	patches.kernel.org/6.12.54-027-perf-test-Update-sysfs-path-for-core-PMU-caps.patch
 	patches.kernel.org/6.12.54-028-perf-test-shell-lbr-Avoid-failures-with-perf-.patch
+	patches.kernel.org/6.12.54-029-perf-session-Fix-handling-when-buffer-exceeds.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
