--- a/series.conf
+++ b/series.conf
@@ -11249,6 +11249,7 @@
 	patches.kernel.org/6.12.54-265-copy_file_range-limit-size-if-in-compat-mode.patch
 	patches.kernel.org/6.12.54-266-minixfs-Verify-inode-mode-when-loading-from-d.patch
 	patches.kernel.org/6.12.54-267-pid-Add-a-judgment-for-ns-null-in-pid_nr_ns.patch
+	patches.kernel.org/6.12.54-268-fs-Add-initramfs_options-to-set-initramfs-mou.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
