--- a/series.conf
+++ b/series.conf
@@ -11097,6 +11097,7 @@
 	patches.kernel.org/6.12.54-113-media-ti-j721e-csi2rx-Fix-source-subdev-link-.patch
 	patches.kernel.org/6.12.54-114-media-lirc-Fix-error-handling-in-lirc_registe.patch
 	patches.kernel.org/6.12.54-115-drm-panthor-Fix-memory-leak-in-panthor_ioctl_.patch
+	patches.kernel.org/6.12.54-116-drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
