--- a/series.conf
+++ b/series.conf
@@ -11240,6 +11240,7 @@
 	patches.kernel.org/6.12.54-256-ipmi-Rework-user-message-limit-handling.patch
 	patches.kernel.org/6.12.54-257-ipmi-Fix-handling-of-messages-with-provided-r.patch
 	patches.kernel.org/6.12.54-258-mm-rmap-fix-soft-dirty-and-uffd-wp-bit-loss-w.patch
+	patches.kernel.org/6.12.54-259-s390-bpf-Centralize-frame-offset-calculations.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
