--- a/series.conf
+++ b/series.conf
@@ -11236,6 +11236,7 @@
 	patches.kernel.org/6.12.54-252-ACPI-property-Disregard-references-in-data-on.patch
 	patches.kernel.org/6.12.54-253-ACPI-property-Add-code-comments-explaining-wh.patch
 	patches.kernel.org/6.12.54-254-ACPI-property-Do-not-pass-NULL-handles-to-acp.patch
+	patches.kernel.org/6.12.54-255-mptcp-pm-in-kernel-usable-client-side-with-C-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
