clk: qcom: common: Fix NULL vs IS_ERR() check in qcom_cc_icc_register() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10998,6 +10998,7 @@
 	patches.kernel.org/6.12.54-014-perf-test-trace_btf_enum-Skip-if-permissions-.patch
 	patches.kernel.org/6.12.54-015-perf-evsel-Avoid-container_of-on-a-NULL-leade.patch
 	patches.kernel.org/6.12.54-016-libperf-event-Ensure-tracing-data-is-multiple.patch
+	patches.kernel.org/6.12.54-017-clk-qcom-common-Fix-NULL-vs-IS_ERR-check-in-q.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
