--- a/series.conf
+++ b/series.conf
@@ -11199,6 +11199,7 @@
 	patches.kernel.org/6.12.54-215-ext4-correctly-handle-queries-for-metadata-ma.patch
 	patches.kernel.org/6.12.54-216-ext4-avoid-potential-buffer-over-read-in-pars.patch
 	patches.kernel.org/6.12.54-217-ext4-fix-an-off-by-one-issue-during-moving-ex.patch
+	patches.kernel.org/6.12.54-218-ext4-guard-against-EA-inode-refcount-underflo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
