--- a/series.conf
+++ b/series.conf
@@ -11117,6 +11117,7 @@
 	patches.kernel.org/6.12.54-133-fs-quota-create-dedicated-workqueue-for-quota.patch
 	patches.kernel.org/6.12.54-134-fuse-fix-possibly-missing-fuse_copy_finish-ca.patch
 	patches.kernel.org/6.12.54-135-fuse-fix-livelock-in-synchronous-file-put-fro.patch
+	patches.kernel.org/6.12.54-136-iio-adc-pac1934-fix-channel-disable-configura.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
