selftests: netfilter: query conntrack state to check for port clash resolution (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11056,6 +11056,7 @@
 	patches.kernel.org/6.12.54-072-drm-amd-display-Properly-disable-scaling-on-D.patch
 	patches.kernel.org/6.12.54-073-netfilter-nft_objref-validate-objref-and-objr.patch
 	patches.kernel.org/6.12.54-074-bridge-br_vlan_fill_forward_path_pvid-use-br_.patch
+	patches.kernel.org/6.12.54-075-selftests-netfilter-query-conntrack-state-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
