KEYS: trusted_tpm1: Compare HMAC values in constant time (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11127,6 +11127,7 @@
 	patches.kernel.org/6.12.54-143-iio-imu-inv_icm42600-Drop-redundant-pm_runtim.patch
 	patches.kernel.org/6.12.54-144-iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supp.patch
 	patches.kernel.org/6.12.54-145-kernel-sys.c-fix-the-racy-usage-of-task_lock-.patch
+	patches.kernel.org/6.12.54-146-KEYS-trusted_tpm1-Compare-HMAC-values-in-cons.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
