--- a/series.conf
+++ b/series.conf
@@ -11144,6 +11144,7 @@
 	patches.kernel.org/6.12.54-160-sched-deadline-Fix-race-in-push_dl_task.patch
 	patches.kernel.org/6.12.54-161-scsi-hpsa-Fix-potential-memory-leak-in-hpsa_b.patch
 	patches.kernel.org/6.12.54-162-scsi-sd-Fix-build-warning-in-sd_revalidate_di.patch
+	patches.kernel.org/6.12.54-163-sctp-Fix-MAC-comparison-to-be-constant-time.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
