--- a/series.conf
+++ b/series.conf
@@ -11231,6 +11231,7 @@
 	patches.kernel.org/6.12.54-247-nfsd-unregister-with-rpcbind-when-deleting-a-.patch
 	patches.kernel.org/6.12.54-248-ACPI-battery-allocate-driver-data-through-dev.patch
 	patches.kernel.org/6.12.54-249-ACPI-battery-initialize-mutexes-through-devm_.patch
+	patches.kernel.org/6.12.54-250-ACPI-battery-Check-for-error-code-from-devm_m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
