iio: xilinx-ams: Unmask interrupts after updating alarms (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11122,6 +11122,7 @@
 	patches.kernel.org/6.12.54-138-iio-dac-ad5421-use-int-type-to-store-negative.patch
 	patches.kernel.org/6.12.54-139-iio-frequency-adf4350-Fix-prescaler-usage.patch
 	patches.kernel.org/6.12.54-140-iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
+	patches.kernel.org/6.12.54-141-iio-xilinx-ams-Unmask-interrupts-after-updati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
