--- a/series.conf
+++ b/series.conf
@@ -11146,6 +11146,7 @@
 	patches.kernel.org/6.12.54-162-scsi-sd-Fix-build-warning-in-sd_revalidate_di.patch
 	patches.kernel.org/6.12.54-163-sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.kernel.org/6.12.54-164-sparc64-fix-hugetlb-for-sun4u.patch
+	patches.kernel.org/6.12.54-165-sparc-fix-error-handling-in-scan_one_device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
