--- a/series.conf
+++ b/series.conf
@@ -11213,6 +11213,7 @@
 	patches.kernel.org/6.12.54-229-PCI-endpoint-Remove-surplus-return-statement-.patch
 	patches.kernel.org/6.12.54-230-PCI-endpoint-pci-epf-test-Add-NULL-check-for-.patch
 	patches.kernel.org/6.12.54-231-ASoC-SOF-ipc4-pcm-Enable-delay-reporting-for-.patch
+	patches.kernel.org/6.12.54-232-ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
