PCI: tegra194: Handle errors in BPMP response (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11169,6 +11169,7 @@
 	patches.kernel.org/6.12.54-185-PCI-rcar-host-Drop-PMSR-spinlock.patch
 	patches.kernel.org/6.12.54-186-PCI-rcar-host-Convert-struct-rcar_msi-mask_lo.patch
 	patches.kernel.org/6.12.54-187-PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_m.patch
+	patches.kernel.org/6.12.54-188-PCI-tegra194-Handle-errors-in-BPMP-response.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
