drm/xe/uapi: loosen used tracking restriction (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11099,6 +11099,7 @@
 	patches.kernel.org/6.12.54-115-drm-panthor-Fix-memory-leak-in-panthor_ioctl_.patch
 	patches.kernel.org/6.12.54-116-drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.kernel.org/6.12.54-117-drm-nouveau-fix-bad-ret-code-in-nouveau_bo_mo.patch
+	patches.kernel.org/6.12.54-118-drm-xe-uapi-loosen-used-tracking-restriction.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
